--- a/index.html
+++ b/index.html
@@ -128,6 +128,15 @@
                 </div>
             </div>
         </main>
-    </div>  
+    </div>
+      <!-- Dashboard Page -->
+    <div id="dashboard-page" class="min-h-screen flex flex-col hidden">
+        <!-- Navigation -->
+        <nav class="bg-purple-500 text-white sticky top-0 z-50 shadow-md">
+            <div class="container mx-auto px-4">
+                <div class="flex justify-between items-center h-16">
+                    <div class="flex items-center">
+                        <a href="#" class="text-xl font-bold" onclick="showTab('home')">Luna</a>
+                    </div>
 </body>
 </html>
