--- a/index.html
+++ b/index.html
@@ -290,5 +290,32 @@
                                             </svg>
                                         </button>
                                     </div>
+                                  <div class="grid grid-cols-7 gap-1" id="calendar-container">
+                                        <div class="text-center text-sm font-medium py-2">Sun</div>
+                                        <div class="text-center text-sm font-medium py-2">Mon</div>
+                                        <div class="text-center text-sm font-medium py-2">Tue</div>
+                                        <div class="text-center text-sm font-medium py-2">Wed</div>
+                                        <div class="text-center text-sm font-medium py-2">Thu</div>
+                                        <div class="text-center text-sm font-medium py-2">Fri</div>
+                                        <div class="text-center text-sm font-medium py-2">Sat</div>
+                                        <!-- Calendar days will be inserted by JavaScript -->
+                                    </div>
+                                    
+                                    <div class="flex items-center justify-center space-x-6 mt-4">
+                                        <div class="flex items-center space-x-2">
+                                            <div class="w-4 h-4 rounded-full bg-purple-500"></div>
+                                            <span class="text-sm">Period</span>
+                                        </div>
+                                        <div class="flex items-center space-x-2">
+                                            <div class="w-4 h-4 rounded-full bg-green-500"></div>
+                                            <span class="text-sm">Fertile Window</span>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
 </body>
 </html>
