--- a/index.html
+++ b/index.html
@@ -721,18 +721,18 @@
                                 <div class="bg-white dark:bg-gray-700 rounded-lg shadow-md overflow-hidden transition-transform duration-300 ease-in-out transform hover:-translate-y-1 hover:shadow-lg">
                                     <img src="WhatsApp Image 2025-03-03 at 20.39.14_fa81ed8b.jpg" alt="Muskaan" class="w-full h-48 object-cover">
                                     <div class="p-4">
-                                        <h3 class="text-xl font-semibold mb-2">Muskaan</h3>
+<!--                                         <h3 class="text-xl font-semibold mb-2">Muskaan</h3>
                                         <p class="text-sm text-gray-600 dark:text-gray-300 mb-2">Lead Developer</p>
-                                        <p class="text-sm text-gray-500 dark:text-gray-400">Muskaan led the development of Luna, focusing on the core functionality and user experience.</p>
+                                        <p class="text-sm text-gray-500 dark:text-gray-400">Muskaan led the development of Luna, focusing on the core functionality and user experience.</p> -->
                                     </div>
                                 </div>
                                 
                                 <div class="bg-white dark:bg-gray-700 rounded-lg shadow-md overflow-hidden transition-transform duration-300 ease-in-out transform hover:-translate-y-1 hover:shadow-lg">
                                     <img src="WhatsApp Image 2025-02-27 at 21.06.57_2e9057ab.jpg" alt="Harsh Pathak" class="w-full h-48 object-cover">
                                     <div class="p-4">
-                                        <h3 class="text-xl font-semibold mb-2">Harsh Pathak</h3>
+<!--                                         <h3 class="text-xl font-semibold mb-2">Harsh Pathak</h3>
                                         <p class="text-sm text-gray-600 dark:text-gray-300 mb-2">UI/UX Designer</p>
-                                        <p class="text-sm text-gray-500 dark:text-gray-400">Harsh crafted the beautiful and intuitive interface of Luna, ensuring a seamless user experience.</p>
+                                        <p class="text-sm text-gray-500 dark:text-gray-400">Harsh crafted the beautiful and intuitive interface of Luna, ensuring a seamless user experience.</p> -->
                                     </div>
                                 </div>
                                 
